syntax = "proto3";
option csharp_namespace = "Lachain.Proto";
option java_package = "com.latoken.proto";
import "default.proto";

message Node {
    uint32 version = 1;
    uint64 timestamp = 2;
//    string address = 3;
    ECDSAPublicKey public_key = 4;
    uint32 nonce = 5;
    uint64 block_height = 6;
    string agent = 7;
}
